tests/errors/typecheck/borrow.fil
comp Foo<'G:1>() -> () with {
  some A;
} {
  A := 2;
}

comp main<'G:10>() -> () {
  F := new Foo in ['G, 'G + F::A];
}